# pantoufle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/cant/pan/: Pantoufle.hpp  pan.hpp  pan_forward.hpp
include/cant/pan/control/: MidiControl.hpp  MidiControlCompatible.hpp  MidiControlData.hpp  MidiControlData.inl  control.hpp  control_forward.hpp
include/cant/pan/controller/: ControllerUpdate.hpp  MidiController.hpp  MidiDamper.hpp  MidiPan.hpp  MidiWah.hpp  MultiMidiController.hpp  MultiMidiController.inl  controller.hpp
include/cant/pan/envelope/: ADSREnvelope.hpp  ADSRState.hpp  FlatEnvelope.hpp  FlatToneEnvelope.hpp  MidiEnvelope.hpp  MidiEnvelope.inl  adsr_forward.hpp  envelope.hpp
include/cant/pan/layer/: MidiNoteInputLayer.hpp  MidiNoteInputPoly.hpp  MidiNoteInternalLayer.hpp  MidiNoteLayer.hpp  MidiNoteLayer.inl  MidiNoteOutputLayer.hpp  layer.hpp  layer_forward.hpp
include/cant/pan/note/: ControlledMidiNote.hpp  DampMidiNote.hpp  DecoratedMidiNote.hpp  EnvelopedMidiNote.hpp  LazyMidiNote.hpp  MidiNote.hpp  MidiNote.inl  MidiNoteCompatible.hpp  MidiNoteData.hpp  MidiNoteData.inl  MidiNoteInput.hpp  MidiNoteInternalOutput.hpp  RawMidiNote.hpp  note.hpp  note_forward.hpp
include/cant/pan/processor/: ControllerManager.hpp  EnvelopeChain.hpp  MidiControllerChain.hpp  MidiEnvelopeLayer.hpp  MidiEnvelopePair.hpp  MidiProcessor.hpp  MidiProcessor.inl  MidiProcessorMemory.hpp  processor.hpp
include/cant/pan/stream/: MidiStream.hpp
include/cant/pan/time/: CustomMidiTimer.hpp  MidiTimer.hpp  MidiTimer.inl  SystemMidiTimer.hpp  time.hpp
include/cant/pan/timer/: ChangeFlagUpdatable.hpp  MidiTimer.hpp  TimeUpdatable.hpp  TimerUpdate.hpp  timer.hpp
inline/cant/pan/: Pantoufle.inl
inline/cant/pan/control/: MidiControlData.inl
inline/cant/pan/controller/: MultiMidiController.inl
inline/cant/pan/envelope/: ADSRState.inl  MidiEnvelope.inl
inline/cant/pan/layer/: MidiNoteLayer.inl
inline/cant/pan/note/: MidiNote.inl  MidiNoteData.inl  MidiNoteInput.inl  MidiNoteInternalOutput.inl
inline/cant/pan/processor/: MidiProcessor.inl  MidiProcessorMemory.inl
inline/cant/pan/time/: CustomMidiTimer.inl  MidiTimer.inl  SystemMidiTimer.inl
source/cant/pan/: Pantoufle.cpp
source/cant/pan/control/: MidiControl.cpp  MidiControlData.cpp
source/cant/pan/controller/: MidiController.cpp  MidiDamper.cpp  MidiPan.cpp  MidiWah.cpp
source/cant/pan/envelope/: ADSREnvelope.cpp  ADSRState.cpp  FlatEnvelope.cpp  FlatToneEnvelope.cpp  MidiEnvelope.cpp
source/cant/pan/layer/: MidiNoteInputLayer.cpp  MidiNoteInputPoly.cpp  MidiNoteInternalLayer.cpp  MidiNoteLayer.cpp  MidiNoteOutputLayer.cpp
source/cant/pan/note/: ControlledMidiNote.cpp  DampMidiNote.cpp  DecoratedMidiNote.cpp  EnvelopedMidiNote.cpp  LazyMidiNote.cpp  MidiNote.cpp  MidiNoteData.cpp  MidiNoteInput.cpp  MidiNoteInternalOutput.cpp  RawMidiNote.cpp
source/cant/pan/processor/: ControllerManager.cpp  EnvelopeChain.cpp  MidiControllerChain.cpp  MidiEnvelopeLayer.cpp  MidiEnvelopePair.cpp
source/cant/pan/timer/: ChangeFlagUpdatable.cpp  MidiTimer.cpp  TimeUpdatable.cpp
